@@ -6,7 +6,6 @@ package org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.misc;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumMap;
 import java.util.List;
@@ -25,12 +24,13 @@ import org.opensmartgridplatform.dlms.interfaceclass.InterfaceClass;
 import org.opensmartgridplatform.dlms.interfaceclass.attribute.ClockAttribute;
 import org.opensmartgridplatform.dlms.interfaceclass.attribute.DataAttribute;
 import org.opensmartgridplatform.dlms.interfaceclass.attribute.RegisterAttribute;
+import org.opensmartgridplatform.dlms.objectconfig.Attribute;
 import org.opensmartgridplatform.dlms.objectconfig.CosemObject;
 import org.opensmartgridplatform.dlms.objectconfig.DlmsObjectType;
-import org.opensmartgridplatform.dlms.objectconfig.MeterType;
 import org.opensmartgridplatform.dlms.objectconfig.ObjectProperty;
 import org.opensmartgridplatform.dlms.objectconfig.PowerQualityProfile;
 import org.opensmartgridplatform.dlms.objectconfig.PowerQualityRequest;
+import org.opensmartgridplatform.dlms.objectconfig.ValueType;
 import org.opensmartgridplatform.dlms.services.ObjectConfigService;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.ActualPowerQualityDataDto;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.ActualPowerQualityRequestDto;
@@ -120,12 +120,21 @@ public class GetActualPowerQualityCommandExecutor
         powerQualityObject = new PowerQualityObjectDto(pqObject.getTag(), null);
 
       } else if (pqObject.getClassId() == CLASS_ID_REGISTER) {
-        final String scalerUnit =
-            pqObject.getAttribute(RegisterAttribute.SCALER_UNIT.attributeId()).getValue();
-
-        final DlmsMeterValueDto meterValue =
-            this.dlmsHelper.getScaledMeterValueWithScalerUnit(
-                resultValue, scalerUnit, "Actual Power Quality - " + pqObject.getObis());
+        final DlmsMeterValueDto meterValue;
+        if (this.readScalerValueFromMeter(pqObject)) {
+          final GetResult resultValueScalerUnit = resultList.get(idx++);
+          meterValue =
+              this.dlmsHelper.getScaledMeterValue(
+                  resultValue,
+                  resultValueScalerUnit,
+                  "Actual Power Quality - " + pqObject.getObis());
+        } else {
+          final String scalerUnit =
+              pqObject.getAttribute(RegisterAttribute.SCALER_UNIT.attributeId()).getValue();
+          meterValue =
+              this.dlmsHelper.getScaledMeterValueWithScalerUnit(
+                  resultValue, scalerUnit, "Actual Power Quality - " + pqObject.getObis());
+        }
 
         final BigDecimal value = meterValue != null ? meterValue.getValue() : null;
         final String unit = meterValue != null ? meterValue.getDlmsUnit().getUnit() : null;
@@ -155,6 +164,15 @@ public class GetActualPowerQualityCommandExecutor
     return new ActualPowerQualityDataDto(powerQualityObjects, powerQualityValues);
   }
 
+  private boolean readScalerValueFromMeter(final CosemObject pqObject) {
+    if (pqObject.hasAttribute(RegisterAttribute.SCALER_UNIT.attributeId())) {
+      final Attribute attribute =
+          pqObject.getAttribute(RegisterAttribute.SCALER_UNIT.attributeId());
+      return attribute.getValuetype() != ValueType.FIXED_IN_PROFILE;
+    }
+    return false;
+  }
+
   private PowerQualityProfile determineProfile(final ActualPowerQualityRequestDto request) {
 
     try {
@@ -177,33 +195,41 @@ public class GetActualPowerQualityCommandExecutor
       allPQObjects.add(clockObject);
 
       // Create map with the required properties and values for the power quality objects
-      final EnumMap<ObjectProperty, List<Object>> pqProperties =
+      final EnumMap<ObjectProperty, List<String>> pqProperties =
           new EnumMap<>(ObjectProperty.class);
       pqProperties.put(ObjectProperty.PQ_PROFILE, Collections.singletonList(profile.name()));
       pqProperties.put(
           ObjectProperty.PQ_REQUEST,
-          Arrays.asList(PowerQualityRequest.ONDEMAND.name(), PowerQualityRequest.BOTH.name()));
+          List.of(
+              device.isPolyphase()
+                  ? PowerQualityRequest.ACTUAL_PP.name()
+                  : PowerQualityRequest.ACTUAL_SP.name()));
 
       // Get matching power quality objects from config
-      final List<CosemObject> objectsForProfile =
+      final List<CosemObject> pqObjects =
           this.objectConfigService.getCosemObjectsWithProperties(
               device.getProtocolName(), device.getProtocolVersion(), pqProperties);
-
-      // Filter for single phase / poly phase
-      final List<CosemObject> pqObjects =
-          objectsForProfile.stream()
-              .filter(object -> this.objectHasCorrectMeterType(object, device))
-              .toList();
 
       allPQObjects.addAll(pqObjects);
       return allPQObjects;
     } catch (final ObjectConfigException e) {
-      throw new ProtocolAdapterException("Error in object config", e);
+      throw new ProtocolAdapterException(AbstractCommandExecutor.ERROR_IN_OBJECT_CONFIG, e);
     }
   }
 
   private List<AttributeAddress> getAttributeAddresses(final List<CosemObject> pqObjects) {
-    return pqObjects.stream().map(this::getAttributeAddress).filter(Objects::nonNull).toList();
+    final List<AttributeAddress> attributeAddresses = new ArrayList<>();
+    for (final CosemObject pqObject : pqObjects) {
+      attributeAddresses.add(this.getAttributeAddress(pqObject));
+      if (this.readScalerValueFromMeter(pqObject)) {
+        attributeAddresses.add(
+            new AttributeAddress(
+                pqObject.getClassId(),
+                pqObject.getObis(),
+                RegisterAttribute.SCALER_UNIT.attributeId()));
+      }
+    }
+    return attributeAddresses.stream().filter(Objects::nonNull).toList();
   }
 
   private AttributeAddress getAttributeAddress(final CosemObject object) {
@@ -219,10 +245,5 @@ public class GetActualPowerQualityCommandExecutor
       log.warn("No attribute addresses returned for interface class of {}", object.getTag());
       return null;
     }
-  }
-
-  private boolean objectHasCorrectMeterType(final CosemObject object, final DlmsDevice device) {
-    return (!device.isPolyphase() && object.getMeterTypes().contains(MeterType.SP))
-        || (device.isPolyphase() && object.getMeterTypes().contains(MeterType.PP));
   }
 }
